IHHW-1 prevent small screens with zoom getting stuck at mobile menu

--- a/htdocs/wp-content/themes/ihh/resources/assets/styles/common/_global.scss
+++ b/htdocs/wp-content/themes/ihh/resources/assets/styles/common/_global.scss
@@ -50,3 +50,8 @@ main p a {
     text-decoration: none !important;
   }
 }
+
+body > nav {
+  max-height: 100vh;
+  overflow-y: scroll;
+}
